added nav and banner section

--- a/index.html
+++ b/index.html
@@ -4,10 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to Digital Agency</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    <div>
-        
-    </div>
+   <header>
+        <div class="nav-container">
+            <div class="logo">
+                <img src="asset/logo/logo.png" alt="">
+            </div>
+            <div class="menus">
+                <li>Home</li>
+                <li>Service</li>
+                <li>About</li>
+                <li>Contact</li>
+            </div>
+        </div>
+        <div class="banner-container">
+            <div class="banner-info">
+                <h1 class="banner-title"><span>Digital</span> Agency You <br> Can Rely Upon!</h1>
+                <p class="banner-paragraph">Hymenaeos! Omnis arcu vitae? Phasellus irure cupidatat incidunt, 
+                    semper metus, nibh adipisci assumenda odio, quos, senectus vehicula occaecat, 
+                    officiis malesuada cras.</p>
+                    <button class="primary" id="btn-discover">Discover More</button>
+                    <button class="primary">Hire Us Now</button>
+            </div>
+        </div>
+   </header>
+   <main>
+    
+   </main>
+   <footer></footer>
 </body>
 </html>
