--- a/index.html
+++ b/index.html
@@ -25,13 +25,55 @@
                 <p class="banner-paragraph">Hymenaeos! Omnis arcu vitae? Phasellus irure cupidatat incidunt, 
                     semper metus, nibh adipisci assumenda odio, quos, senectus vehicula occaecat, 
                     officiis malesuada cras.</p>
-                    <button class="primary" id="btn-discover">Discover More</button>
-                    <button class="primary">Hire Us Now</button>
+                    <button class="btn-primary" id="btn-discover">Discover More</button>
+                    <button class="btn-primary">Hire Us Now</button>
             </div>
         </div>
    </header>
    <main>
-    
+    <div class="service-container">
+        <div class="left-side-container">
+            <button class="btn-service">Service List</button>
+            <div class="service-info">
+                <h1 class="service-title"><span>Services</span> We Can Help You With!</h1>
+                <p class="service-paragraph">Vero id posuere tempus aspernatur quaerat mollis voluptatum eveniet porro viverra libero habitasse porro fames quos pharetra diam cupidatat ligula! Netus! Quos dignissi mos laoreet.<br> <br>
+                1. Nobis ridiculus cupiditate egestas commodi.<br>
+                2. Ipsum dui curabitur dapibuish mollitia.</p>
+            </div>
+            <div class="author-container">
+                <div class="author-profile">
+                    <img class="author-photo" src="./asset/image/author.jpg" alt="">
+                    <h5 class="author-name">George Smith <br>
+                        <small class="author-post">CEO, Director</small>
+                    </h5>
+                    <div class="line"></div>
+                    <button id="btn-details" class="btn-service">More Details</button>
+                </div>
+            </div>
+        </div>
+        <div class="right-side-container">
+            <div class="first-two-box">
+                <div class="box">
+                    <img class="icon" src="./asset/icons/coding.png" alt="">
+                    <h3 class="icon-paragraph">Website Development</h3>
+                </div>
+                <div class="box">
+                     <img class="icon" src="./asset/icons/bar-chart.png" alt="">
+                    <h3 class="icon-paragraph">Graphics & Sketch Designing</h3>
+                </div>
+            </div>
+            <div class="first-two-box">
+                <div class="box">
+                    <img class="icon" src="./asset/icons/startup.png" alt="">
+                    <h3 class="icon-paragraph">Seo & Content Writing</h3>
+                </div>
+                <div class="box">
+                    <img class="icon" src="./asset/icons/digital-marketing.png" alt="">
+                    <h3 class="icon-paragraph">Digital Marketing Plannning</h3>
+                </div>
+            </div>
+        </div>
+    </div>
    </main>
    <footer></footer>
 </body>
