--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
         </div>
    </header>
    <main>
+
+    <!-- service section -->
+
     <div class="service-container">
         <div class="left-side-container">
             <button class="btn-service">Service List</button>
@@ -71,6 +74,21 @@
                     <img class="icon" src="./asset/icons/digital-marketing.png" alt="">
                     <h3 class="icon-paragraph">Digital Marketing Plannning</h3>
                 </div>
+            </div>
+        </div>
+    </div>
+    
+    <!-- appointment section -->
+    <div class="appointment-container">
+        <div class="ap-content">
+            <div class="ap-logo">
+                <img class="icon" src="./asset/icons/phone-call.png" alt="">
+                <p class="ap-call">GET A FREE CONSULTATION<br>987 233 0000</p>
+            </div>
+            <div class="ap-details">
+                <p class="ap-paragraph">Vero id posuere tempus aspernatur quaerat mollis voluptatum eveniet porro
+                viverra libero habitasse Aut ab nibh aliqua optio veniet porro  viverr.</p>
+                <button class="btn-service">Make Appointment</button>
             </div>
         </div>
     </div>
